# Husky-Experiments

./: .travis.yml  README.md
husky_color/: CMakeLists.txt  package.xml
husky_color/launch/: color.launch
husky_color/src/: Color.cpp
husky_color/worlds/: world1.world
husky_corridor/: CMakeLists.txt  package.xml
husky_corridor/include/husky_corridor/: CorridorFinder.h  RANSAC.h
husky_corridor/launch/: corridor.launch
husky_corridor/msg/: Line.msg  Lines.msg
husky_corridor/src/: Corridor.cpp  CorridorFinder.cpp  RANSAC.cpp
husky_corridor/worlds/: corridor1.world
husky_simple_nav/: CMakeLists.txt  package.xml
husky_simple_nav/include/husky_simple_nav/: PillarFinder.h
husky_simple_nav/launch/: simple_nav_pillar.launch
husky_simple_nav/msg/: EmergencyStop.msg
husky_simple_nav/src/: PillarFinder.cpp  SimpleNav.cpp
